<resources>
    <string name="app_name">Self Service</string>
    <string name="cashier_login">Cashier Sign In</string>
    <string name="cashier">Sigma Cashier</string>
    <string name="user">User</string>
    <string name="user_email">Email *</string>
    <string name="pass">Password*</string>
    <string name="login">Sign In</string>
    <string name="user_login">Sign In</string>
    <string name="enter_user_phone_number">Enter user phone number</string>
    <string name="verify">Verify</string>
    <string name="enter_your_registered_phone_number">Enter your registered phone number</string>
    <string name="verify_otp_send_to_your_registered_number">Verify OTP send to your registered number</string>
    <string name="send_otp">Send OTP</string>
    <string name="internet_connection_not_available">Internet connection not available</string>
    <string name="do_you_want_to_logout">Do you want to logout?</string>
    <string name="OK">Ok</string>
    <string name="view_details">View Details</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="submit">Submit</string>
    <string name="user_name">Username</string>
    <string name="user_name2">User name*</string>
    <string name="cancel">Cancel</string>
    <string name="large_text">
        "Material is the metaphor.\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n"

        "Bold, graphic, intentional.\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n"

        "Motion provides meaning.\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n"

        "3D world.\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n"

        "Light and shadow.\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n"

        "Resting elevation.\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n"
    </string>
    <string name="ok">OK</string>
    <string name="open">Open</string>
    <string name="from_date">From date</string>
    <string name="to_date">To date</string>
    <string name="view_invoice">View Invoice</string>
    <string name="item">Item</string>
    <string name="terms_and_conditions"><![CDATA[- Terms & Conditions -]]></string>
    <string name="enterEmailErrorText">Email is required</string>
    <string name="enterValidEmailErrorText">Enter a valid email</string>
    <string name="enterPasswordErrorText">Password is required</string>
    <string name="enterPasswordLengthErrorText">Password must contain at least 8 characters</string>
    <string name="usernameIsRequired">display is required</string>
    <string name="usernameLengthErrorText">Username must contain at least 4 characters</string>
    <string name="Yes">Yes</string>
    <string name="No">No</string>
    <string name="enterAboutMeErrorText">About me is required</string>
    <string name="enterVerificationCodeError">Verification code can\'t be empty</string>
    <string name="enterDOBErrorText">Date of birth is required</string>
    <string name="enterCountryErrorText">Country is required</string>
    <string name="enterGenderErrorText">Gender is required</string>
    <string name="time_out_messages"> Time out error internet connection is too low . </string>
    <string name="pick_up">Pick Up</string>
    <string name="kv_group">An online platform initiative of KV Group</string>
    <string name="password">Password</string>
    <string name="request_change_password">Request to change password</string>
    <string name="thank_you">Thank You</string>
    <string name="order_successfully_delivered">Order Successfully Delivered</string>
    <string name="sent_to_your">All order details sent to your registered mail Id.</string>
    <string name="Do_you_want_to_Logout">Do you want to logout?</string>
    <string name="my_profile">My Profile</string>
    <string name="picked_up_order">Picked Up Order</string>
    <string name="delivery_details">Delivery Details</string>
    <string name="help">Help</string>
    <string name="logout">Logout</string>
    <string name="customer_details">Customer Details</string>
    <string name="order_summary">Order Summary</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="price_omr">Price (OMR)</string>
    <string name="sub_total">Sub-Total</string>
    <string name="coupon_discount">Coupon Discount</string>
    <string name="net_amount">Net Amount</string>
    <string name="confirm">Confirm</string>
    <string name="text_return">Return</string>
    <string name="choose_reason">Choose Reason</string>
    <string name="missing_order_items">Missing Order Items</string>
    <string name="not_present_home">Not Present Home</string>
    <string name="seal_broken">Seal Broken</string>
    <string name="others">Others</string>
    <string name="describe_your_reason">Describe Your Reason</string>
    <string name="write_to_us">Write to us…</string>
    <string name="u00a9_2020">© 2020</string>
    <string name="resend_again">Resend again in </string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="current_delivery_details">Current Delivery Details</string>
    <string name="dummy_address">P.O. Box 1555, CPO 115641, Muscat\nSultanate of Oman</string>
    <string name="reach">Reach</string>
    <string name="call">Call</string>
    <string name="picked_up_items_list">Picked Up Items List</string>
    <string name="pick_up_items_list">Pick Up Items List</string>
    <string name="dummy_order_id">Order ID: #13524563</string>
    <string name="dummy_mobile">Mobile No: 987874564</string>
    <string name="dummy_name">John Doe</string>
    <string name="dummy_email_mobile">john@abc.com, 987874564</string>
    <string name="order_details">Order Details</string>
    <string name="order_return">Order Return</string>
    <string name="new_order_place">New Order Place</string>
    <string name="total">Total</string>
    <string name="order_items_list">Order Items List</string>
    <string name="property_management_system">Property Management System</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_in_to_start_your_session">Sign in to start your session</string>
    <string name="enter_one_time_password_otp">Enter one time password (OTP)</string>
    <string name="search">Search</string>
    <string name="property_id">Property ID</string>
    <string name="notice_no">Notice No.</string>
    <string name="search_property">Search Property</string>
    <string name="_2020_assesment">2020 Assesment</string>
    <string name="dummy_amount">100,040</string>
    <string name="arrear_due">Arrears Due</string>
    <string name="penalty">Penalty</string>
    <string name="amount_paid">Amount Paid</string>
    <string name="balance">Balance</string>
    <string name="save">Save</string>
    <string name="enter_amount_paying">Enter Amount Paying</string>
    <string name="paying_amount">Paying Amount</string>
    <string name="pre_calculated">Pre-calculated: </string>
    <string-array name="payment_type">
        <item>Part Payment</item>
        <item>Full Payment</item>
    </string-array>
    <string name="total_amount">Total Amount</string>
    <string name="enter_total_paying">Enter Total Paying</string>
    <string name="cheque_no">Cheque No</string>
    <string name="enter_cheque_no">Enter Cheque No</string>
    <string name="payee_name">Payee Name</string>
    <string name="enter_payee_name">Enter Payee Name</string>
    <string name="details">Details</string>
    <string name="assessment_history">Assessment History</string>
    <string name="landlord_details">Landlord Details</string>
    <string name="property_details">Property Details</string>
    <string name="occupancy_details">Occupancy Details</string>
    <string name="assessment_details">Assessment Details</string>
    <string name="enter_id_to_receive_the_one_time_password_otp">Enter id to receive the one time password (OTP)</string>
    <string name="hi_cashier_please_sign_in_to_start_your_session"> Hi Cashier, Please Sign In to Start</string>
    <string name="not_cashier_please_click_here_to_sign_in">Landlord/Property Owner ? Please <font color='#2196F3'>Click here to Sign In</font></string>
    <string name="municipal_rate_management_system">municipal rate management system</string>
    <string name="community_engagement_platform">community engagement platform</string>
    <string name="check_in">Check In</string>
    <string name="self_service">Self Service portal</string>
    <string name="council_cashier">Council cashier</string>
</resources>