<?xml version="1.0" encoding="utf-8"?>


<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_marginLeft="@dimen/dimen20dp"
    android:layout_marginTop="@dimen/button_height40dp"
    android:layout_marginRight="@dimen/dimen20dp"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/Do_you_want_to_Logout"
        android:textSize="@dimen/headerTextSize14sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen140dp"
        android:layout_marginTop="@dimen/dimen30dp">

        <Button
            android:id="@+id/btnCancel"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginEnd="@dimen/dimen5dp"
            android:layout_weight="1"
            android:background="@color/colorRed"
            android:text="@string/No"
            android:textColor="@color/colorWhite" />

        <Button
            android:id="@+id/btnOk"
            android:layout_width="0dp"
            android:layout_height="35dp"
            android:layout_marginStart="@dimen/dimen5dp"
            android:layout_weight="1"
            android:background="@color/lightGray"
            android:text="@string/Yes"
            android:textColor="@color/colorWhite" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/dimen20dp"
        android:orientation="horizontal">

    </LinearLayout>
</LinearLayout>
