<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_border_margin_20dp">


    <TextView
        android:id="@+id/txtOtpEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen20dp"
        android:text="@string/enter_one_time_password_otp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textLarge24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:id="@+id/etDigit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen30dp"
        android:orientation="horizontal"
        android:weightSum="4"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtOtpEnter">

        <EditText
            android:id="@+id/activityOtp_et_otp_one"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen60dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_solid_grey"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:text="@string/_1" />

        <EditText
            android:id="@+id/activityOtp_et_otp_two"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen60dp"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_solid_grey"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:text="@string/_2" />

        <EditText
            android:id="@+id/activityOtp_et_otp_three"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen60dp"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_solid_grey"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:text="@string/_3" />

        <EditText
            android:id="@+id/activityOtp_et_otp_four"
            android:layout_width="0dp"
            android:layout_height="@dimen/dimen60dp"
            android:layout_marginStart="@dimen/dimen20dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_corner_solid_grey"
            android:gravity="center"
            android:inputType="number"
            android:maxLength="1"
            android:text="4" />

    </LinearLayout>

    <TextView
        android:id="@+id/tvResend"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen30dp"
        android:text="@string/resend_again"
        android:textAlignment="center"
        android:textSize="@dimen/textMedium14sp"
        app:layout_constraintStart_toStartOf="@+id/etDigit"
        app:layout_constraintTop_toBottomOf="@id/etDigit" />

    <TextView
        android:id="@+id/tvCounter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen30dp"
        android:text="01:00"
        android:textAlignment="center"
        android:textSize="@dimen/textMedium14sp"
        app:layout_constraintEnd_toEndOf="@+id/etDigit"
        app:layout_constraintTop_toBottomOf="@id/etDigit" />

    <Button
        android:id="@+id/btSubmit"
        style="@style/styleButtonWrapContent"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height40dp"
        android:layout_marginTop="@dimen/dimen30dp"
        android:background="@drawable/rounded_corner_solid_blue"
        android:text="@string/sign_in"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textMedium14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tvCounter" />

</androidx.constraintlayout.widget.ConstraintLayout>