<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite">

    <androidx.appcompat.widget.AppCompatImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:srcCompat="@drawable/ic_lion_bg" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <include layout="@layout/toolbar_header_back" />

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fadingEdge="none"
            android:scrollbars="none">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btUserLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/user_login_with_919503595423"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen24dp"
                    android:layout_marginTop="@dimen/dimen24dp"
                    android:gravity="center_horizontal"
                    android:text="@string/municipal_rate_management_system"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dimen17sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dimen8dp"
                    android:gravity="center_horizontal"
                    android:text="@string/self_service"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/dimen17sp"
                    android:textStyle="bold" />
                <ImageView
                    android:layout_width="@dimen/dimen90dp"
                    android:layout_height="@dimen/dimen90dp"
                    android:src="@drawable/ic_splash"
                    android:layout_marginTop="16dp"
                    android:layout_marginHorizontal="@dimen/dimen24dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:text="@string/hi_cashier_please_sign_in_to_start_your_session"
                    android:visibility="gone" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="20dp"
                    android:layout_marginTop="60dp"
                    android:layout_marginEnd="20dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <Button
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_select_blue_button"
                        android:fontFamily="@font/font_roboto_regular"
                        android:text="@string/cashier"
                        android:textAllCaps="false"
                        android:textColor="@color/blue_light"
                        android:textSize="13sp" />

                    <View
                        android:layout_width="10dp"
                        android:layout_height="match_parent" />

                    <Button
                        android:id="@+id/btUser"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_weight="1"
                        android:background="@drawable/bg_btn_login"
                        android:fontFamily="@font/font_roboto_regular"
                        android:text="@string/user"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF"
                        android:textSize="13sp" />
                </LinearLayout>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen24dp"
                    android:layout_marginTop="@dimen/dimen40dp">

                    <TextView
                        android:id="@+id/tvHeader"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:fontFamily="@font/font_roboto_regular"
                        android:text="@string/council_cashier"
                        android:textAllCaps="true"
                        android:textColor="@color/colorPrimary"
                        android:textSize="@dimen/textSmall12sp"
                        android:textStyle="bold" />

                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/tvHeader"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_square_blue_border"
                        android:fontFamily="@font/font_roboto_regular"
                        android:hint="@string/user_name2"
                        android:text="@string/ykoroma_svl_com"
                        android:inputType="textEmailAddress"
                        android:paddingStart="10dp"
                        android:textSize="13sp"
                        tools:ignore="RtlSymmetry" />
                    <!-- android:text="ykoroma@svl.com"-->
                    <EditText
                        android:id="@+id/etPassword"
                        android:layout_width="match_parent"
                        android:layout_height="40dp"
                        android:layout_below="@+id/etEmail"
                        android:layout_centerHorizontal="true"
                        android:layout_marginTop="10dp"
                        android:background="@drawable/bg_square_blue_border"
                        android:fontFamily="@font/font_roboto_regular"
                        android:hint="@string/pass"
                        android:text="@string/wardc_2019"
                        android:inputType="textPassword"
                        android:paddingStart="10dp"
                        android:textSize="13sp" />
                    <!-- android:text="WardC@2019"-->

                    <Button
                        android:id="@+id/btLogin"
                        android:layout_width="150dp"
                        android:layout_height="40dp"
                        android:layout_below="@+id/etPassword"
                        android:layout_alignParentEnd="true"
                        android:layout_marginTop="@dimen/dimen20dp"
                        android:background="@drawable/bg_btn_login"
                        android:fontFamily="@font/font_roboto_regular"
                        android:text="@string/sign_in"
                        android:textAllCaps="false"
                        android:textColor="#FFFFFF"
                        android:textSize="@dimen/textMedium14sp" />
                </RelativeLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="@dimen/dimen24dp"
                    android:layout_marginTop="@dimen/dimen30dp"
                    android:text="@string/community_engagement_platform"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="@dimen/textSmall12sp"
                    android:textStyle="bold" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/btCheckIn"
                    android:layout_width="@dimen/dimen150dp"
                    android:layout_height="@dimen/dimen40dp"
                    android:layout_gravity="end"
                    android:layout_marginTop="@dimen/dimen12dp"
                    android:layout_marginEnd="@dimen/dimen24dp"
                    android:background="@drawable/bg_btn_login"
                    android:gravity="center"
                    android:paddingHorizontal="@dimen/dimen16dp"
                    android:paddingVertical="@dimen/dimen8dp"
                    android:text="@string/check_in"
                    android:textAllCaps="false"
                    android:textColor="#FFFFFF"
                    android:textSize="@dimen/textMedium14sp" />

                <TextView
                    android:id="@+id/tvCashier"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/dimen40dp"
                    android:padding="@dimen/dimen8dp"
                    android:text="@string/not_cashier_please_click_here_to_sign_in"
                    android:textSize="@dimen/textSmall12sp" />


            </LinearLayout>
        </ScrollView>
    </androidx.appcompat.widget.LinearLayoutCompat>
</FrameLayout>
