<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/rounded_corner_green"
    android:padding="@dimen/layout_border_margin_16dp">

    <TextView
        android:id="@+id/adapterListPickUp_tv_number"
        android:layout_width="@dimen/button_height40dp"
        android:layout_height="@dimen/button_height40dp"
        android:background="@drawable/circle_green"
        android:gravity="center"
        android:text="1"
        android:textColor="@color/colorWhite"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adapterListPickUp_tv_order_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_border_margin_16dp"
        android:layout_marginTop="@dimen/margin_between_text5dp"
        android:text="@string/dummy_order_id"
        android:textColor="@color/textGrey"
        android:textSize="@dimen/bodyTextSize12sp"
        app:layout_constraintLeft_toRightOf="@+id/adapterListPickUp_tv_number"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/adapterListPickUp_tv_amount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_border_margin_16dp"
        android:layout_marginTop="@dimen/margin_between_text5dp"
        android:text="@string/dummy_amount"
        android:textColor="@color/textGrey"
        android:textSize="@dimen/bodyTextSize12sp"
        app:layout_constraintLeft_toRightOf="@+id/adapterListPickUp_tv_number"
        app:layout_constraintTop_toBottomOf="@+id/adapterListPickUp_tv_order_id" />


    <TextView
        android:id="@+id/adapterListPickUp_tv_address"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_border_margin_16dp"
        android:layout_marginTop="@dimen/margin_between_text5dp"
        android:text="@string/dummy_address"
        android:textColor="@color/textGrey"
        android:textSize="@dimen/bodyTextSize12sp"
        app:layout_constraintLeft_toRightOf="@+id/adapterListPickUp_tv_number"
        app:layout_constraintTop_toBottomOf="@+id/adapterListPickUp_tv_amount" />

    <TextView
        android:id="@+id/adapterListPickUp_tv_mobile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/layout_border_margin_16dp"
        android:layout_marginTop="@dimen/margin_between_text5dp"
        android:text="@string/dummy_mobile"
        android:textColor="@color/textGrey"
        android:textSize="@dimen/bodyTextSize12sp"
        app:layout_constraintLeft_toRightOf="@+id/adapterListPickUp_tv_number"
        app:layout_constraintTop_toBottomOf="@+id/adapterListPickUp_tv_address" />

    <Button
        android:id="@+id/adapterListPickUp_bt_pickup"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height40dp"
        android:layout_marginTop="@dimen/layout_border_margin_16dp"
        android:layout_marginEnd="@dimen/dimen5dp"
        android:background="@color/colorPrimary"
        android:text="@string/pick_up"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/bodyTextSize12sp"
        app:layout_constraintEnd_toStartOf="@+id/adapterListPickUp_bt_cancel"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/adapterListPickUp_tv_mobile" />

    <Button
        android:id="@+id/adapterListPickUp_bt_cancel"
        android:layout_width="0dp"
        android:layout_height="@dimen/button_height40dp"
        android:layout_marginStart="@dimen/dimen5dp"
        android:layout_marginTop="@dimen/layout_border_margin_16dp"
        android:background="@color/colorRed"
        android:text="@string/cancel"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/bodyTextSize12sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="5"
        app:layout_constraintLeft_toRightOf="@+id/adapterListPickUp_tv_number"
        app:layout_constraintStart_toEndOf="@+id/adapterListPickUp_bt_pickup"
        app:layout_constraintTop_toBottomOf="@+id/adapterListPickUp_tv_mobile" />

</androidx.constraintlayout.widget.ConstraintLayout>