<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/layout_border_margin_20dp">

    <TextView
        android:id="@+id/txtOtpEnter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen40dp"
        android:text="@string/enter_id_to_receive_the_one_time_password_otp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/textLarge24sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/activityOtp_et_username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dimen60dp"
        android:background="@drawable/rounded_corner_solid_grey"
        android:gravity="center_vertical"
        android:hint="@string/user_name"
        android:imeOptions="actionDone"
        android:inputType="text"
        android:padding="@dimen/layout_border_margin_16dp"
        android:textColor="@color/colorBlack"
        android:textSize="@dimen/headerTextSize14sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtOtpEnter" />


    <Button
        android:id="@+id/activityOtp_btVerify"
        style="@style/styleButtonWrapContent"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/button_height40dp"
        android:layout_marginTop="@dimen/dimen30dp"
        android:background="@drawable/rounded_corner_solid_blue"
        android:text="@string/verify"
        android:textAlignment="center"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/textMedium14sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/activityOtp_et_username" />

</androidx.constraintlayout.widget.ConstraintLayout>